@@ -140,6 +140,22 @@ Report bugs to <b>{0}</b>. Please include<br>\
 the version number ({1}) in your correspondence.\
 </html>
 
+message.help.translation.credits=\
+<html>\
+Use this field to give yourself credit for this translation.<br>\
+You can enter plain text or HTML, for example:<br><br>\
+John Smith, University of Colorado<br>\
+<br>\
+...or...<br><br>\
+&lt;html&gt;<br>\
+John Smith&lt;br&gt;<br>\
+University of Colorado&lt;br&gt;<br>\
+http://www.your-website.com<br>\
+&lt;/html&gt;<br>\
+<br>\
+To see your credits in the sim, choose Help->About->Credits.\
+</html>
+
 message.updateAvailable=\
 <html>\
 A newer version of PhET Translation Utility is available.<br>\
